# advent-tools

./: README.md  pyproject.toml
advent/: __init__.py  _benchmark.py  _config_reader.py  _data_handle.py  _downloader.py  _helpers.py  _pedantics.py  _py_interface.py  _typeshack.py  examplary_data.json
tests/: test_pedantics.py
