[project]
name = "advent-tools"
version = "0.1.0"
description = "Cool set of tools for working with Advent of Code challenges"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "platformdirs>=4.3.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]


[tool.pyright]
venvPath = "."
venv = ".venv"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.uv]
package = true
