[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "advent-tools"
version = "1.0.0b1"
authors = [{name ="Achyuth Jayadevan", email = "achyuth@jayadevan.in"}]
description = "Cool set of tools for working with Advent of Code challenges"
readme = "README.md"
keywords = ["advent", "advent of code", "advent tools", "aoc"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Utilities",
    "Typing :: Typed"
]
requires-python = ">=3.9"
dependencies = [
    "platformdirs>=4.3.6",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "tomli>=2.2.1",
]

[project.urls]
Repository = "https://github.com/Achxy/advent-tools.git"
"Bug Tracker" = "https://github.com/Achxy/advent-tools/issues"

[tool.hatch.build.targets.sdist]
exclude = [".venv/"]

[tool.hatch.build.targets.wheel]
packages = ["advent/"]

[tool.pyright]
venv = ".venv"
venvPath = "."
reportUnnecessaryTypeIgnoreComment = "warning"
pythonVersion = "3.9"
typeCheckingMode = "strict"

[tool.black]
line-length = 125

[tool.isort]
profile = "black"
combine_as_imports = true
combine_star = true
line_length = 125

[tool.uv]
package = true

[dependency-groups]
dev = [
    "typing-extensions>=4.12.2",
]
test = [
    "pytest>=8.3.4",
]
lint = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "pyright>=1.1.390",
]
